# cmake_template

./: CMakeLists.txt
apl/: CMakeLists.txt
apl/src/: main.cpp
lib/: CMakeLists.txt
lib/str/: CMakeLists.txt
lib/str/src/: random.cpp  random.h
